<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/controls_wrapper"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_alignTop="@id/aligner"
    android:layout_alignParentBottom="true"
    android:gravity="center"
    android:orientation="horizontal"
    android:background="@color/primary_dark">

    <ImageButton
        android:src="@drawable/ic_shuffle_white_36dp"
        android:contentDescription="@string/nowplaying_shuffle_description"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/nowplaying_control_ripple"
        tools:ignore="NestedWeights"/>

    <ImageButton
        android:id="@+id/rewind"
        android:src="@drawable/ic_rewind_white_36dp"
        android:contentDescription="@string/nowplaying_rewind_description"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/nowplaying_control_ripple"/>

    <ImageButton
        android:id="@+id/play_pause"
        android:src="@drawable/ic_pause_white_36dp"
        android:contentDescription="@string/nowplaying_playPause_description"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/nowplaying_control_ripple"/>

    <ImageButton
        android:id="@+id/fast_forward"
        android:src="@drawable/ic_fast_forward_white_36dp"
        android:contentDescription="@string/nowplaying_fastForward_description"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/nowplaying_control_ripple"/>

    <ImageButton
        android:src="@drawable/ic_repeat_white_36dp"
        android:contentDescription="@string/nowplaying_repeat_description"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/nowplaying_control_ripple"/>

</LinearLayout>