<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/nowplaying_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/nowplaying_text_marginLeft"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/nowplaying_title_textSize"
            tools:text="Now Playing Track Title"/>

        <TextView
            android:id="@+id/nowplaying_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/nowplaying_info_marginTop"
            android:layout_marginLeft="@dimen/nowplaying_text_marginLeft"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/nowplaying_info_textSize"
            tools:text="Artist Name - Album Name"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingLeft="@dimen/nowPlaying_controls_horizontalPadding"
        android:paddingRight="@dimen/nowPlaying_controls_horizontalPadding"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="@color/colorPrimaryDark">

        <ImageButton
            android:src="@drawable/ic_shuffle_white_36dp"
            android:contentDescription="@string/nowplaying_shuffle_description"
            android:layout_width="0dp"
            android:layout_height="@dimen/nowplaying_control_height"
            android:layout_weight="1"
            android:background="@drawable/nowplaying_control_ripple"
            tools:ignore="NestedWeights"/>

        <ImageButton
            android:src="@drawable/ic_rewind_white_36dp"
            android:contentDescription="@string/nowplaying_rewind_description"
            android:layout_width="0dp"
            android:layout_height="@dimen/nowplaying_control_height"
            android:layout_weight="1"
            android:background="@drawable/nowplaying_control_ripple"/>

        <ImageButton
            android:id="@+id/nowplaying_control_playPause"
            android:src="@drawable/ic_play_white_36dp"
            android:contentDescription="@string/nowplaying_playPause_description"
            android:layout_width="0dp"
            android:layout_height="@dimen/nowplaying_control_height"
            android:layout_weight="1"
            android:background="@drawable/nowplaying_control_ripple"/>

        <ImageButton
            android:src="@drawable/ic_fast_forward_white_36dp"
            android:contentDescription="@string/nowplaying_fastForward_description"
            android:layout_width="0dp"
            android:layout_height="@dimen/nowplaying_control_height"
            android:layout_weight="1"
            android:background="@drawable/nowplaying_control_ripple"/>

        <ImageButton
            android:src="@drawable/ic_repeat_white_36dp"
            android:contentDescription="@string/nowplaying_repeat_description"
            android:layout_width="0dp"
            android:layout_height="@dimen/nowplaying_control_height"
            android:layout_weight="1"
            android:background="@drawable/nowplaying_control_ripple"/>

    </LinearLayout>

</LinearLayout>